--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,35 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 albucore==0.0.33
 albumentationsx==2.0.11
+annotated-doc==0.0.4
 annotated-types==0.7.0
+anyio==4.11.0
 attrs==25.3.0
+audioop-lts==0.2.2
+brotli==1.2.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.3.1
 contourpy==1.3.3
 cycler==0.12.1
+datasets==4.4.1
+dill==0.4.0
+fastapi==0.121.2
+ffmpy==1.0.0
 filelock==3.19.1
 fonttools==4.60.0
 frozenlist==1.7.0
 fsspec==2025.9.0
+gradio==5.49.1
+gradio_client==1.13.3
+groovy==0.1.2
+h11==0.16.0
 hf-xet==1.1.10
+httpcore==1.0.9
+httpx==0.28.1
 huggingface-hub==0.35.1
 idna==3.10
 imageio==2.37.0
@@ -22,44 +38,64 @@ kiwisolver==1.4.9
 lazy_loader==0.4
 lightning==2.5.5
 lightning-utilities==0.15.2
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.6
+mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.6.4
+multiprocess==0.70.18
 networkx==3.5
 numpy==2.2.6
 opencv-python==4.12.0.88
 opencv-python-headless==4.12.0.88
+orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
 propcache==0.3.2
+pyarrow==22.0.0
 pydantic==2.11.9
 pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytorch-lightning==2.5.5
 pytz==2025.2
 PyYAML==6.0.3
 requests==2.32.5
+rich==14.2.0
+ruff==0.14.5
+safehttpx==0.1.7
 safetensors==0.6.2
 scikit-image==0.25.2
 scipy==1.16.2
 segmentation_models_pytorch==0.5.0
+semantic-version==2.10.0
 setuptools==80.9.0
+shellingham==1.5.4
 simsimd==6.5.3
 six==1.17.0
+sniffio==1.3.1
+starlette==0.49.3
 stringzilla==4.0.14
 sympy==1.14.0
 tifffile==2025.9.30
 timm==1.0.20
+tomlkit==0.13.3
 torch==2.8.0
 torchinfo==1.8.0
 torchmetrics==1.8.2
 torchvision==0.23.0
 tqdm==4.67.1
+typer==0.20.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.38.0
+websockets==15.0.1
+xxhash==3.6.0
 yarl==1.20.1
